# ExtendedKalmanFilter

./: README.md
controllers/MyControllers/: MyController.cpp
devel/: .catkin
devel/include/comm_webots/: BoolStamped.h  ContactPoint.h  Float64Stamped.h  Int32Stamped.h  Int8Stamped.h  RadarTarget.h  RecognitionObject.h  RecognitionObjects.h  StringStamped.h  camera_get_focus_info.h  camera_get_focus_infoRequest.h  camera_get_focus_infoResponse.h  camera_get_info.h  camera_get_infoRequest.h  camera_get_infoResponse.h  camera_get_zoom_info.h  camera_get_zoom_infoRequest.h  camera_get_zoom_infoResponse.h  display_draw_line.h  display_draw_lineRequest.h  display_draw_lineResponse.h  display_draw_oval.h  display_draw_ovalRequest.h  display_draw_ovalResponse.h  display_draw_pixel.h  display_draw_pixelRequest.h  display_draw_pixelResponse.h  display_draw_polygon.h  display_draw_polygonRequest.h  display_draw_polygonResponse.h  display_draw_rectangle.h  display_draw_rectangleRequest.h  display_draw_rectangleResponse.h  display_draw_text.h  display_draw_textRequest.h  display_draw_textResponse.h  display_get_info.h  display_get_infoRequest.h  display_get_infoResponse.h  display_image_copy.h  (+308 more)
devel/include/movement/: BoolStamped.h  ContactPoint.h  Float64Stamped.h  Int32Stamped.h  Int8Stamped.h  RadarTarget.h  RecognitionObject.h  RecognitionObjects.h  StringStamped.h  camera_get_focus_info.h  camera_get_focus_infoRequest.h  camera_get_focus_infoResponse.h  camera_get_info.h  camera_get_infoRequest.h  camera_get_infoResponse.h  camera_get_zoom_info.h  camera_get_zoom_infoRequest.h  camera_get_zoom_infoResponse.h  display_draw_line.h  display_draw_lineRequest.h  display_draw_lineResponse.h  display_draw_oval.h  display_draw_ovalRequest.h  display_draw_ovalResponse.h  display_draw_pixel.h  display_draw_pixelRequest.h  display_draw_pixelResponse.h  display_draw_polygon.h  display_draw_polygonRequest.h  display_draw_polygonResponse.h  display_draw_rectangle.h  display_draw_rectangleRequest.h  display_draw_rectangleResponse.h  display_draw_text.h  display_draw_textRequest.h  display_draw_textResponse.h  display_get_info.h  display_get_infoRequest.h  display_get_infoResponse.h  display_image_copy.h  (+308 more)
devel/include/tcc_msg/: BoolStamped.h  ContactPoint.h  EkfController.h  Float64Stamped.h  Int32Stamped.h  Int8Stamped.h  RadarTarget.h  RecognitionObject.h  RecognitionObjects.h  SendPositonCommPy.h  SendPositonCommPyRequest.h  SendPositonCommPyResponse.h  StringStamped.h  WalkCreatorRequestSrv.h  WalkCreatorRequestSrvRequest.h  WalkCreatorRequestSrvResponse.h  WalkingPositionsMsg.h  camera_get_focus_info.h  camera_get_focus_infoRequest.h  camera_get_focus_infoResponse.h  camera_get_info.h  camera_get_infoRequest.h  camera_get_infoResponse.h  camera_get_zoom_info.h  camera_get_zoom_infoRequest.h  camera_get_zoom_infoResponse.h  display_draw_line.h  display_draw_lineRequest.h  display_draw_lineResponse.h  display_draw_oval.h  display_draw_ovalRequest.h  display_draw_ovalResponse.h  display_draw_pixel.h  display_draw_pixelRequest.h  display_draw_pixelResponse.h  display_draw_polygon.h  display_draw_polygonRequest.h  display_draw_polygonResponse.h  display_draw_rectangle.h  display_draw_rectangleRequest.h  (+317 more)
src/comm_py/: CMakeLists.txt
src/comm_webots/: CMakeLists.txt  package.xml
src/comm_webots/include/commWebots/: commWebots.h
src/comm_webots/launch/: commWebots.launch  comm_test.launch
src/comm_webots/src/: commWebots.cpp  commWebots_node.cpp  comm_test.cpp
src/controller/: mainpage.dox  manifest.xml
src/ekf/: CMakeLists.txt
src/movement/: CMakeLists.txt
src/tcc_msg/: CMakeLists.txt  package.xml
src/walk_creator/: CMakeLists.txt  package.xml
worlds/: .walking_tcc.wbproj  walking_tcc.wbt
(+1859 files in other folders)
